fixed text-align

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
 h1 {
 color: Blue;
-test: align: center;
+test-align: center;
 }
